--- a/templates/telegraf.conf
+++ b/templates/telegraf.conf
@@ -17,27 +17,27 @@
 ###############################################################################
 
 [[outputs.influxdb]]
-  urls = [{ INFLUX_URL }] # required
-  database = { INFLUX_DB } # required
+  urls = ["{{ INFLUX_URL }}"] 
+  database = "{{ INFLUX_DB }}" 
   retention_policy = ""
   write_consistency = "any"
   timeout = "5s"
-  username = { INFLUX_USER }
-  password = { INFLUX_PWD }
+  username = "{{ INFLUX_USER }}"
+  password = "{{ INFLUX_PWD }}"
 
 ###############################################################################
 #                            SERVICE INPUT PLUGINS                            #
 ###############################################################################
 
 [[inputs.mqtt_consumer]]
-  servers = [{ MOSQUITTO_URL }]
+  servers = ["{{ MOSQUITTO_URL }}"]
   qos = 1
   topics = [
-    { MOSQUITTO_TOPIC }
+    "{{ MOSQUITTO_TOPIC }}"
   ]
   persistent_session = true
-  client_id = { MOSQUITTO_CLIENTID }
-  username = { MOSQUITTO_USER }
-  password = { MOSQUITTO_PWD }
+  client_id = "{{ MOSQUITTO_CLIENTID }}"
+  username = "{{ MOSQUITTO_USER }}"
+  password = "{{ MOSQUITTO_PWD }}"
   data_format = "influx"
 
