--- a/templates/telegraf.conf
+++ b/templates/telegraf.conf
@@ -2,15 +2,16 @@
   interval = "10s"
   round_interval = true
   metric_batch_size = 10000
-  metric_buffer_limit = 10000
+  metric_buffer_limit = 100000
   collection_jitter = "0s"
   flush_interval = "10s"
   flush_jitter = "0s"
   precision = ""
-  debug = true
+  debug = false
   quiet = false
   hostname = ""
   omit_hostname = false
+  allowed_pending_messages = 50000
 
 ###############################################################################
 #                            OUTPUT PLUGINS                                   #
@@ -24,6 +25,7 @@
   timeout = "5s"
   username = "{{ INFLUX_USER }}"
   password = "{{ INFLUX_PWD }}"
+  skip_database_creation = true
 
 ###############################################################################
 #                            SERVICE INPUT PLUGINS                            #
